<resources>
    <string name="app_name">StaplesHighSchoolScheduler</string>
    <string name="ERROR">Error</string>
    <string name="Refresh">Server Refresh</string>
    <string name="periodPlaceholder">0</string>
    <string name="Remaining">Remaining</string>
    <string name="Notifications">Notification Preferences</string>
    <string name="ScheduleInput">Schedule Input</string>
    <string name="Quote">Quote of the Day</string>
    <string name="ForceRefresh">Force Server Data Refresh</string>
    <string name="Calendar">Go to Date</string>
    <string name="Settings">Settings</string>
    <string name="Blank"> </string>
    <string name="E">E</string>
    <string name="DefaultQuote">No Quote Found</string>
    <string name="FAQ">FAQs</string>

    <!-- Schedule Input Placeholders -->
    <string name="Period_1_Class_Name">Period 1</string>
    <string name="Period_2_Class_Name">Period 2</string>
    <string name="Period_3_Class_Name">Period 3</string>
    <string name="Period_4_Class_Name">Period 4</string>
    <string name="Period_5_Class_Name">Period 5</string>
    <string name="Period_6_Class_Name">Period 6</string>
    <string name="Period_7_Class_Name">Period 7</string>
    <string name="Period_8_Class_Name">Period 8</string>

    <string name="Period_1_Class_Type">Free or Not Applicable</string>
    <string name="Period_2_Class_Type">Free or Not Applicable</string>
    <string name="Period_3_Class_Type">Free or Not Applicable</string>
    <string name="Period_4_Class_Type">Free or Not Applicable</string>
    <string name="Period_5_Class_Type">Free or Not Applicable</string>
    <string name="Period_6_Class_Type">Free or Not Applicable</string>
    <string name="Period_7_Class_Type">Free or Not Applicable</string>
    <string name="Period_8_Class_Type">Free or Not Applicable</string>

    <string name="Period_1_Class_Info">No Info</string>
    <string name="Period_2_Class_Info">No Info</string>
    <string name="Period_3_Class_Info">No Info</string>
    <string name="Period_4_Class_Info">No Info</string>
    <string name="Period_5_Class_Info">No Info</string>
    <string name="Period_6_Class_Info">No Info</string>
    <string name="Period_7_Class_Info">No Info</string>
    <string name="Period_8_Class_Info">No Info</string>

    <!-- This is for preferences screen below-->

    <string name="pref_app_name">Preferences</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="title_activity_class_input">Class Input</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!-- End Preference Strings -->


</resources>
