<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notification_on"
            android:title="@string/Notifications" />

        <item
            android:id="@+id/nav_schedule_input"
            android:icon="@drawable/ic_input"
            android:title="@string/ScheduleInput" />

        <item
            android:id="@+id/nav_quote"
            android:icon="@drawable/ic_quote"
            android:title="@string/Quote" />

        <item
            android:id="@+id/nav_date_change"
            android:icon="@drawable/ic_calendar"
            android:title="@string/Calendar" />

        <item
            android:id="@+id/nav_force_server_refresh"
            android:icon="@drawable/ic_refresh"
            android:title="@string/ForceRefresh" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/Settings" />

        <!-- <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tools" />\
            -->
    </group>
</menu>